# calpersonal

./: .gitignore  Cargo.toml  README.md
src/: calendar_auth.rs  config.rs  file_writing.rs  main.rs  parse_input.rs  tasks_auth.rs  weather.rs
