[package]
name = "calpersonal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
dirs = "6.0.0"
google-calendar3 = "6.0.0"
google-tasks1 = "6.0.0"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client", "http1"] }
ratatui = "0.29.0"
regex = "1.12.2"
rustls = "0.23.35"
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
